--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "pg": "^8.7.3",
     "pg-connection-string": "^2.5.0",
     "sqlite3": "^5.0.4",
-    "strapi": "3.2.5",
-    "strapi-admin": "3.2.5",
-    "strapi-connector-bookshelf": "3.2.5",
-    "strapi-plugin-content-manager": "3.2.5",
-    "strapi-plugin-content-type-builder": "3.2.5",
-    "strapi-plugin-email": "3.2.5",
-    "strapi-plugin-upload": "3.2.5",
-    "strapi-plugin-users-permissions": "3.2.5",
+    "strapi": "^3.6.11",
+    "strapi-admin": "^3.6.11",
+    "strapi-connector-bookshelf": "^3.6.11",
+    "strapi-plugin-content-manager": "^3.6.11",
+    "strapi-plugin-content-type-builder": "^3.6.11",
+    "strapi-plugin-email": "^3.6.11",
+    "strapi-plugin-upload": "^3.6.11",
+    "strapi-plugin-users-permissions": "^3.6.11",
     "strapi-utils": "3.2.5"
   },
   "author": {
