node and npm ver

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "uuid": "8715cbed-a6ed-4700-bc41-444293351d4e"
   },
   "engines": {
-    "node": ">=19.3.0",
-    "npm": ">=6.0.0"
+    "node": ">=16.x",
+    "npm": ">=8.5.5"
   },
   "license": "MIT"
 }
